// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BookingBreakdown customer transaction data matches snapshot 1`] = `
<div
  className=""
>
  <div>
    <span>
      <span>
        BookingBreakdown.pricePerNight
      </span>
    </span>
    <span>
      10
    </span>
  </div>
  <div>
    <span>
      <span>
        BookingBreakdown.bookingPeriod
      </span>
    </span>
    <span>
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "BookingBreakdown.nightCount",
          }
        }
      />
    </span>
  </div>
  <hr />
  <div>
    <div>
      <span>
        BookingBreakdown.total
      </span>
    </div>
    <div>
      20
    </div>
  </div>
</div>
`;

exports[`BookingBreakdown pretransaction data matches snapshot 1`] = `
<div
  className=""
>
  <div>
    <span>
      <span>
        BookingBreakdown.pricePerNight
      </span>
    </span>
    <span>
      10
    </span>
  </div>
  <div>
    <span>
      <span>
        BookingBreakdown.bookingPeriod
      </span>
    </span>
    <span>
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "BookingBreakdown.nightCount",
          }
        }
      />
    </span>
  </div>
  <hr />
  <div>
    <div>
      <span>
        BookingBreakdown.total
      </span>
    </div>
    <div>
      20
    </div>
  </div>
</div>
`;

exports[`BookingBreakdown provider canceled transaction data matches snapshot 1`] = `
<div
  className=""
>
  <div>
    <span>
      <span>
        BookingBreakdown.pricePerNight
      </span>
    </span>
    <span>
      10
    </span>
  </div>
  <div>
    <span>
      <span>
        BookingBreakdown.bookingPeriod
      </span>
    </span>
    <span>
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "BookingBreakdown.nightCount",
          }
        }
      />
    </span>
  </div>
  <div>
    <span>
      <span>
        BookingBreakdown.subTotal
      </span>
    </span>
    <span>
      20
    </span>
  </div>
  <div>
    <span>
      <span>
        BookingBreakdown.refund
      </span>
    </span>
    <span>
      -20
    </span>
  </div>
  <div>
    <span>
      <span>
        BookingBreakdown.commission
      </span>
    </span>
    <span>
      -2
    </span>
  </div>
  <div>
    <span>
      <span>
        BookingBreakdown.refundProviderFee
      </span>
    </span>
    <span>
      2
    </span>
  </div>
  <hr />
  <div>
    <div>
      <span>
        BookingBreakdown.providerTotalCanceled
      </span>
    </div>
    <div>
      0
    </div>
  </div>
  <span>
    <span>
      BookingBreakdown.commissionFeeNote
    </span>
  </span>
</div>
`;

exports[`BookingBreakdown provider transaction data matches snapshot 1`] = `
<div
  className=""
>
  <div>
    <span>
      <span>
        BookingBreakdown.pricePerNight
      </span>
    </span>
    <span>
      10
    </span>
  </div>
  <div>
    <span>
      <span>
        BookingBreakdown.bookingPeriod
      </span>
    </span>
    <span>
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "BookingBreakdown.nightCount",
          }
        }
      />
    </span>
  </div>
  <div>
    <span>
      <span>
        BookingBreakdown.subTotal
      </span>
    </span>
    <span>
      20
    </span>
  </div>
  <div>
    <span>
      <span>
        BookingBreakdown.commission
      </span>
    </span>
    <span>
      -2
    </span>
  </div>
  <hr />
  <div>
    <div>
      <span>
        BookingBreakdown.providerTotalDefault
      </span>
    </div>
    <div>
      18
    </div>
  </div>
  <span>
    <span>
      BookingBreakdown.commissionFeeNote
    </span>
  </span>
</div>
`;
